--- a/template.yaml
+++ b/template.yaml
@@ -4,19 +4,62 @@ Description: >
   eks-automation-lambda
 
 Resources:
+  GitLambdaLayer:
+    Type: AWS::Serverless::LayerVersion
+    Properties:
+      LayerName: git-lambda-layer
+      Description: Git Lambda Layer
+      ContentUri: s3://eks-automation-s3-bucket/layer.zip
+      CompatibleRuntimes:
+        - python3.9
+        - python3.10
+        - python3.11
   EKSAutomationFunction:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: eks_automation/
       Handler: app.lambda_handler
       Runtime: python3.11
+      Timeout: 30
       Events:
         EKSAutomation:
           Type: Api
           Properties:
             Path: /EKSAutomation
             Method: get
-
+      Policies:
+        - AWSLambdaVPCAccessExecutionRole
+        - Statement:
+          - Sid: SSMDescribeParametersPolicy
+            Effect: Allow
+            Action:
+            - ssm:DescribeParameters
+            Resource: '*'
+          - Sid: SSMGetParameterPolicy
+            Effect: Allow
+            Action:
+            - ssm:GetParameters
+            - ssm:GetParameter
+            Resource: '*'
+      VpcConfig:
+        SecurityGroupIds:
+          - sg-03cbf2a626ed55c7e
+        SubnetIds:
+          - subnet-05192178ac094f639
+          - subnet-022370a5a03585376
+      PropagateTags: True
+      Tags:
+        environment: development
+        environment_abbr: dev
+        organization: census:ocio:csvd
+        finops_project_name: csvd_platformbaseline
+        finops_project_number: fs0000000078
+        finops_project_role: csvd_platformbaseline_app
+      Layers:
+        - !Ref GitLambdaLayer
+      Environment:
+        Variables:
+          HOME: /tmp
 Outputs:
   EKSAutomationApi:
     Description: "API Gateway endpoint URL for Prod stage for EKS Automation function"
