--- a/template.yaml
+++ b/template.yaml
@@ -49,7 +49,7 @@ Resources:
     Properties:
       LayerName: git-lambda-layer
       Description: Git Lambda Layer
-      ContentUri: s3://eks-automation-s3-bucket/layer.zip
+      ContentUri: s3://eks-automation-lambda-s3-bucket/layer.zip
       CompatibleRuntimes:
         - python3.9
         - python3.10
@@ -106,7 +106,7 @@ Resources:
 Outputs:
   EKSAutomationApi:
     Description: "API Gateway endpoint URL for Prod stage for EKS Automation function"
-    Value: !Sub "https://${EKSAutomationApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/automation/"
+    Value: !Sub "https://${EKSAutomationApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/EKSAutomation/"
   EKSAutomationFunction:
     Description: "EKS Automation Lambda Function ARN"
     Value: !GetAtt EKSAutomationFunction.Arn
