--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches: [ "main" ]
-  
+
 permissions:
   contents: write
   id-token: write
@@ -33,11 +33,16 @@ jobs:
           curl -sSL https://raw.githubusercontent.com/HappyPathway/centralized-actions/main/gtag.py -o gtag.py
           curl -sSL https://raw.githubusercontent.com/HappyPathway/centralized-actions/main/gtag_requirements.txt -o requirements.txt
             
-      - name: Setup Python
-        uses: actions/setup-python@v2
+      - name: Setup minimal Python for gtag
+        uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-          cache: pip
+          cache: 'pip'
+          cache-dependency-path: requirements.txt
+            
+      - name: Install gtag dependencies
+        run: |
+          python -m pip install -r requirements.txt
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3.1.2
@@ -95,3 +100,4 @@ jobs:
           -var "repository_uri=${{ env.repository_uri }}" \
           -var "tag=${{ env.next_tag }}" \
           packer.pkr.hcl
+
