--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      PACKER_GITHUB_API_TOKEN: ${{ secrets.GH_TOKEN }}
       AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: us-east-1
+      GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
       
     steps:
       - uses: actions/setup-node@v3
@@ -43,7 +43,7 @@ jobs:
       - name: Install gtag dependencies
         run: |
           python -m pip install -r requirements.txt
-
+          
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3.1.2
         with:
@@ -100,4 +100,3 @@ jobs:
           -var "repository_uri=${{ env.repository_uri }}" \
           -var "tag=${{ env.next_tag }}" \
           packer.pkr.hcl
-
