--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,8 @@ on:
   workflow_dispatch:
   push:
     branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 permissions:
   contents: write
@@ -13,10 +15,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
+      PACKER_GITHUB_API_TOKEN: ${{ secrets.GH_TOKEN }}
       AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: us-east-1
-      GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
       
     steps:
       - uses: actions/setup-node@v3
@@ -38,7 +40,7 @@ jobs:
         with:
           python-version: '3.11'
           cache: 'pip'
-          cache-dependency-path: requirements.txt
+          cache-dependency-path: gtag_requirements.txt
             
       - name: Install gtag dependencies
         run: |
@@ -74,6 +76,9 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
         with:
           mask-password: true
+          registry-type: public
+        env:
+          AWS_REGION: ${{ env.AWS_DEFAULT_REGION }}
          
       - name: packer init
         run: packer init packer.pkr.hcl
