--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           python-version: '3.11'
           cache: 'pip'
-          cache-dependency-path: gtag_requirements.txt
+          cache-dependency-path: requirements.txt
             
       - name: Install gtag dependencies
         run: |
