Update GitHub client to allow direct commits to main (#8)
* Remove obsolete Lambda packaging script and related configuration files

- Deleted `package_lambda.py` script responsible for packaging AWS Lambda functions and layers.
- Removed `pip.conf` configuration file for pip settings.
- Eliminated `requirements.txt` file that specified Python dependencies.
- Deleted `test_payload.json` used for testing Lambda functions.
- Removed empty JSON and TFVAR files in `varfiles` directory.
- Deleted `variables.tf` file containing Terraform variable definitions.
- Removed `versions.tf` file specifying Terraform version requirements.
- Added new GitHub Actions workflow for building and pushing Lambda container images using Packer.
- Introduced `packer.pkr.hcl` file for Packer configuration to build Docker images for Lambda.

* Refactor GitHub API integration to remove Census-specific references and improve configuration handling

* Update Python setup in build workflow to use actions/setup-python@v4 and improve dependency installation

* Add Terraform backend configuration for GCS storage

* Add GOOGLE_CREDENTIALS environment variable to build workflow

* Remove unused PACKER_GITHUB_API_TOKEN from build workflow environment

* updating build

* Remove eks_automation/data.json configuration file

* Add integration tests and workflow

* Resolve merge conflicts after merging main

* Add integration tests workflow and variables config

* Remove __pycache__ directories and add .gitignore

* Update GitHub client to allow direct commits to main

- Add auto_init and branch settings in repository creation
- Improve branch-specific operations in clone and commit methods
- Fix test cases to properly test branch operations
- Remove version-specific file cloning in favor of branch-based

* Ensure target directory exists when downloading repository files

* Enhance GitHubClient to ensure target directory exists and handle unexpected blob encoding

* Add delay in integration tests to ensure

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches: [ "main" ]
-
+  
 permissions:
   contents: write
   id-token: write
@@ -13,6 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
+      GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
       AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: us-east-1
