--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   integration-tests:
     runs-on: ubuntu-latest
+    if: ${{ github.server_url == 'https://github.com' }}
     permissions:
       contents: read
       pull-requests: write
