--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -21,20 +21,20 @@ jobs:
         with:
           python-version: '3.9'
           cache: 'pip'
-          cache-dependency-path: eks_automation/requirements.txt
+          cache-dependency-path: template_automation/requirements.txt
       
       - name: Install dependencies
         run: |
-          cd eks_automation
+          cd template_automation
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       
       - name: Run integration tests
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN_SECRET_NAME: /dev/secret/ssh/dont/tell
           GITHUB_API: "https://api.github.com"  # Can be overridden with vars if needed
-          GITHUB_ORG: ${{ github.repository_owner }}
-          SECRET_NAME: /dev/secret/ssh/dont/tell
+          GITHUB_ORG_NAME: ${{ github.repository_owner }}
         run: |
-          cd eks_automation
+          cd template_automation
           python -m pytest tests/ -v -m integration
