--- a/.github/workflows/gh-token.yml
+++ b/.github/workflows/gh-token.yml
@@ -4,16 +4,23 @@ on:
   schedule:
     - cron: '*/5 * * * *'  # Runs every 5 minutes
   workflow_dispatch:  # Allows manual triggering
-
+  
+permissions:
+  contents: write
+  id-token: write
+ 
 jobs:
-  refresh-token:
-    name: Refresh GitHub Token
-    uses: CSVD/centralized-actions/.github/workflows/upload-github-token.yml@main
-    with:
-      aws_region: 'us-gov-west-1'
-      secret_name: '/eks-cluster-deployment/github_token'  # This matches the SECRET_NAME in app.py
-      github_app_id: ${{ vars.GH_APP_ID }}
-      github_app_installation_id: ${{ vars.GH_APP_INSTALLATION_ID }}
-      use_ecs_credentials: true
-    secrets:
-      github_app_pem_file: ${{ secrets.GH_APP_PEM_FILE }}
+  build:
+    runs-on: ubuntu-latest
+    if: ${{ github.server_url != 'https://github.com' }}
+    steps:
+      - name: Refresh GitHub Token
+        uses: CSVD/centralized-actions/.github/workflows/upload-github-token.yml@main
+        with:
+          aws_region: 'us-gov-west-1'
+          secret_name: '/eks-cluster-deployment/github_token'  # This matches the SECRET_NAME in app.py
+          github_app_id: ${{ vars.GH_APP_ID }}
+          github_app_installation_id: ${{ vars.GH_APP_INSTALLATION_ID }}
+          use_ecs_credentials: true
+        secrets:
+          github_app_pem_file: ${{ secrets.GH_APP_PEM_FILE }}
