--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
+# Core dependencies
 PyGithub>=2.1.1
 pydantic~=2.6
 boto3>=1.38.6
 requests>=2.32.3
+jinja2>=3.1.0
+typing_extensions>=4.4.0
+pynacl>=1.5.0       # Required by PyGithub for cryptography
+cryptography>=44.0.0 # Required by PyGithub for auth
+pyjwt[crypto]>=2.10.0   # Required by PyGithub for JWT support
+deprecated>=1.2.18  # Required by PyGithub for decorators
